--- a/src/app/components/shared/nav-button/nav-button.component.html
+++ b/src/app/components/shared/nav-button/nav-button.component.html
@@ -1,4 +1,7 @@
-<a class="grid">
-  <span class="material-symbols-outlined flex justify-center">{{ iconName }}</span>
-  <p class="text-center">{{ label }}</p>
-</a>
+<div class="p-2">
+  <a class="grid">
+    <span class="material-symbols-outlined flex justify-center">{{ iconName }}</span>
+    <p class="text-center">{{ label }}</p>
+  </a>
+</div>
+<ng-content></ng-content>
