--- a/src/app/components/shared/icon/icon.component.html
+++ b/src/app/components/shared/icon/icon.component.html
@@ -5,7 +5,7 @@
   viewBox="0 0 24 24"
   stroke-width="1.5"
   stroke="currentColor"
-  class="w-6 h-6 {{ iconStyle }}">
+  [class]="iconStyle">
   <path
     stroke-linecap="round"
     stroke-linejoin="round"
@@ -18,7 +18,7 @@
   viewBox="0 0 24 24"
   stroke-width="1.5"
   stroke="currentColor"
-  class="w-6 h-6 {{ iconStyle }}">
+  [class]="iconStyle">
   <path
     stroke-linecap="round"
     stroke-linejoin="round"
@@ -31,7 +31,7 @@
   viewBox="0 0 24 24"
   stroke-width="1.5"
   stroke="currentColor"
-  class="w-6 h-6 {{ iconStyle }}">
+  [class]="iconStyle">
   <path
     stroke-linecap="round"
     stroke-linejoin="round"
@@ -45,7 +45,7 @@
   viewBox="0 0 24 24"
   stroke-width="1.5"
   stroke="currentColor"
-  class="w-6 h-6 {{ iconStyle }}">
+  [class]="iconStyle">
   <path
     stroke-linecap="round"
     stroke-linejoin="round"
@@ -58,7 +58,7 @@
   viewBox="0 0 24 24"
   stroke-width="1.5"
   stroke="currentColor"
-  class="w-6 h-6 {{ iconStyle }}">
+  [class]="iconStyle">
   <path
     stroke-linecap="round"
     stroke-linejoin="round"
@@ -71,7 +71,7 @@
   viewBox="0 0 24 24"
   stroke-width="1.5"
   stroke="currentColor"
-  class="w-6 h-6 {{ iconStyle }}">
+  [class]="iconStyle">
   <path
     stroke-linecap="round"
     stroke-linejoin="round"
@@ -84,7 +84,7 @@
   viewBox="0 0 24 24"
   stroke-width="1.5"
   stroke="currentColor"
-  class="w-6 h-6 {{ iconStyle }}">
+  [class]="iconStyle">
   <path
     stroke-linecap="round"
     stroke-linejoin="round"
@@ -98,7 +98,7 @@
   viewBox="0 0 24 24"
   stroke-width="1.5"
   stroke="currentColor"
-  class="w-6 h-6 {{ iconStyle }}">
+  [class]="iconStyle">
   <path
     stroke-linecap="round"
     stroke-linejoin="round"
@@ -111,7 +111,7 @@
   viewBox="0 0 24 24"
   stroke-width="1.5"
   stroke="currentColor"
-  class="w-6 h-6 {{ iconStyle }}">
+  [class]="iconStyle">
   <path
     stroke-linecap="round"
     stroke-linejoin="round"
@@ -124,7 +124,7 @@
   viewBox="0 0 24 24"
   stroke-width="1.5"
   stroke="currentColor"
-  class="w-6 h-6 {{ iconStyle }}">
+  [class]="iconStyle">
   <path
     stroke-linecap="round"
     stroke-linejoin="round"
