Ukończenie bocznego menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<app-nav></app-nav>
-<main class="flex justify-center">
-  <div class="w-[91rem]">
-    <router-outlet></router-outlet>
-  </div>
-</main>
+<div class="flex flex-col h-screen w-screen">
+  <app-nav></app-nav>
+  <main class="flex justify-center h-full">
+    <div class="w-[91rem]">
+      <router-outlet></router-outlet>
+    </div>
+  </main>
+</div>
