--- a/src/app/components/nav/nav-button/nav-button.component.html
+++ b/src/app/components/nav/nav-button/nav-button.component.html
@@ -1,5 +1,5 @@
 <div class="relative">
-  <div class="p-2 cursor-pointer hover:bg-neutral-100">
+  <div class="p-2 cursor-pointer hover:bg-green-300">
     <a class="grid" [routerLink]="routeLink">
       <div class="flex justify-center">
         <app-icon [iconName]="iconName"></app-icon>
