--- a/src/app/components/shared/aside/aside.component.html
+++ b/src/app/components/shared/aside/aside.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col h-full -w-64 bg-red-300">
+<div class="flex flex-col h-full w-64 bg-red-300">
   <div class="flex justify-center items-center p-2 bg-green-300">
     <app-icon
       class="w-7 h-7 p-1 mr-2 cursor-pointer hover:bg-green-400 hover:rounded"
