--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -25,18 +25,20 @@
         <app-nav-button
           [iconName]="IconType.userCircle"
           label="{{ 'nav-component.account' | translate }}"
-          (click)="login()"
           (mouseenter)="setDropdownAccountVisible(true)"
           (mouseleave)="setDropdownAccountVisible(false)">
           <app-drop-down-list [isVisible]="isDropdownAccountVisible" [orientation]="DropDownListOrientation.right">
+            <app-drop-down-list-item
+              [item]="{ id: '1', value: 'nav-component.settings' | translate }"
+              routerLink="settings"></app-drop-down-list-item>
             @if (isSignedIn) {
-            <app-drop-down-list-item
-              [item]="{ id: '1', value: 'nav-component.logout' }"
-              (onItemClick)="logout()"></app-drop-down-list-item>
+              <app-drop-down-list-item
+                [item]="{ id: '2', value: 'nav-component.logout' | translate }"
+                (onItemClick)="logout()"></app-drop-down-list-item>
             } @else {
-            <app-drop-down-list-item
-              [item]="{ id: '1', value: 'nav-component.sign-in' }"
-              (onItemClick)="login()"></app-drop-down-list-item>
+              <app-drop-down-list-item
+                [item]="{ id: '2', value: 'nav-component.sign-in' | translate }"
+                (onItemClick)="login()"></app-drop-down-list-item>
             }
           </app-drop-down-list>
         </app-nav-button>
