--- a/src/app/components/shared/drop-down-list/drop-down-list.component.html
+++ b/src/app/components/shared/drop-down-list/drop-down-list.component.html
@@ -1,11 +1,13 @@
 @if (isVisible) {
-<div [class]="styles">
-  <div class="flex flex-col gap-2">
-    @if (items) { @for (item of items; track item.id) {
-    <app-drop-down-list-item [item]="item" (onItemClick)="action($event)"></app-drop-down-list-item>
-    } } @else {
-    <ng-content></ng-content>
-    }
+  <div [class]="styles">
+    <div class="flex flex-col gap-2">
+      @if (items) {
+        @for (item of items; track item.id) {
+          <app-drop-down-list-item [item]="item" (onItemClick)="action($event)"></app-drop-down-list-item>
+        }
+      } @else {
+        <ng-content></ng-content>
+      }
+    </div>
   </div>
-</div>
 }
