--- a/src/app/components/settings/categories/category-list/category-list.component.html
+++ b/src/app/components/settings/categories/category-list/category-list.component.html
@@ -8,7 +8,7 @@
   <app-grid
     [columns]="getColumns()"
     [idName]="'id'"
-    [items]="categories"
+    [items]="categories()"
     [isDetailAction]="true"
     [isEditAction]="true"
     [isRemoveAction]="true"
