--- a/src/app/components/settings/settings-aside/settings-aside.component.html
+++ b/src/app/components/settings/settings-aside/settings-aside.component.html
@@ -1,1 +1,1 @@
-<app-aside [header]="'settings-aside-component.settings' | translate" [items]="getItems()"></app-aside>
+<app-aside [header]="'settings-aside-component.settings' | translate" [items]="items()"></app-aside>
