--- a/src/app/components/shared/aside/aside.component.html
+++ b/src/app/components/shared/aside/aside.component.html
@@ -1,9 +1,9 @@
 <div class="flex h-full">
-  @if (isMenu) {
+  @if (isMenu()) {
     <div class="flex flex-col h-full w-56">
       <div class="flex w-full justify-center items-center p-2 bg-green-300">
         <div class="min-w-7 max-w-7 min-h-7 max-h-7 mr-2">
-          @if (parentIds.length > 0) {
+          @if (parentIds().length > 0) {
             <app-icon
               class="block w-7 h-7 p-1 cursor-pointer hover:bg-green-400 hover:rounded"
               iconStyle="w-5 h-5"
@@ -22,18 +22,22 @@
       </div>
       <div class="h-full border-r">
         @for (item of items; track item.id) {
-          <a class="flex items-center p-2 cursor-pointer hover:bg-green-50" [routerLink]="item.link">
-            <p class="block overflow-hidden text-ellipsis w-full whitespace-nowrap md:whitespace-nowrap">
-              {{ item.name }}
-            </p>
+          <div class="flex items-center hover:bg-green-50">
+            <a
+              class="block py-2 pl-2 overflow-hidden text-ellipsis cursor-pointer w-full whitespace-nowrap md:whitespace-nowrap"
+              [routerLink]="item.link">
+              {{ item.name | translate }}
+            </a>
             @if (item.hasSubCategories) {
-              <app-icon
-                class="hover:bg-green-300 hover:rounded cursor-pointer"
-                [iconName]="IconType.chevronRight"
-                (click)="nextLevel(item)">
-              </app-icon>
+              <div class="py-2 pr-2">
+                <app-icon
+                  class="block hover:bg-green-300 hover:rounded cursor-pointer"
+                  [iconName]="IconType.chevronRight"
+                  (click)="nextLevel(item)">
+                </app-icon>
+              </div>
             }
-          </a>
+          </div>
         }
       </div>
     </div>
